--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             </div>
         </div>
         <div class="main">
+            <div class="title">BMI 紀錄</div>
 
         </div>
         <div class="footer">
