--- a/index.html
+++ b/index.html
@@ -35,6 +35,37 @@
         <div class="main">
             <div class="title">BMI 紀錄</div>
 
+            <div class="record-container">
+                <div class="record normal">
+                    <div class="record-name">理想</div>
+                    <div class="record-detail">
+                        <div class="record-label">BMI</div>
+                        <div class="record-num">20.90</div>
+                    </div>
+                    <div class="record-detail">
+                        <div class="record-label">weight</div>
+                        <div class="record-num">70kg</div>
+                    </div>
+                    <div class="record-detail">
+                        <div class="record-label">height</div>
+                        <div class="record-num">180cm</div>
+                    </div>
+                    <div class="record-label">06-19-2017</div>
+                </div>
+                <div class="record light">
+
+                </div>
+                <div class="record over">
+
+                </div>
+                <div class="record fat">
+
+                </div>
+                <div class="record toofat">
+
+                </div>
+            </div>
+
         </div>
         <div class="footer">
             <img src="img/BMICLogo_black.png" alt="">
