--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="btn">看結果</div>
             <div class="result">
                 <div class="result_num">
-                    <div class="bmi">20.90</div>
+                    <div class="bmi">未知</div>
                     <div class="word">BMI</div>
                     <div class="btn_refresh">
                         <img src="img/icons_loop.png" alt="">
@@ -36,7 +36,8 @@
             <div class="title">BMI 紀錄</div>
 
             <div class="record-container">
-                <div class="record normal">
+                <div class="record normal">目前沒有記錄唷 :) ！</div>
+                <!-- <div class="record normal">
                     <div class="record-name">理想</div>
                     <div class="record-detail">
                         <div class="record-label">BMI</div>
@@ -51,19 +52,8 @@
                         <div class="record-num">180cm</div>
                     </div>
                     <div class="record-label">06-19-2017</div>
-                </div>
-                <div class="record light">
-
-                </div>
-                <div class="record over">
-
-                </div>
-                <div class="record fat">
-
-                </div>
-                <div class="record toofat">
-
-                </div>
+                </div> -->
+                
             </div>
 
         </div>
