--- a/index.html
+++ b/index.html
@@ -20,17 +20,20 @@
                 <label for="">體重 kg</label>
                 <input type="text" class="weight" placeholder="請輸入體重">
             </div>
-            <div class="btn">看結果</div>
-            <div class="result">
-                <div class="result_num">
-                    <div class="bmi">未知</div>
-                    <div class="word">BMI</div>
-                    <div class="btn_refresh">
-                        <img src="img/icons_loop.png" alt="">
+            <div>
+                <div class="btn">看結果</div>
+                <div class="result">
+                    <div class="result_num">
+                        <div class="bmi">未知</div>
+                        <div class="word">BMI</div>
+                        <div class="btn_refresh">
+                            <img src="img/icons_loop.png" alt="">
+                        </div>
                     </div>
+                    <div class="result_name">理想</div>
                 </div>
-                <div class="result_name">理想</div>
             </div>
+
         </div>
         <div class="main">
             <div class="title">BMI 紀錄</div>
@@ -53,7 +56,7 @@
                     </div>
                     <div class="record-label">06-19-2017</div>
                 </div> -->
-                
+
             </div>
 
         </div>
